<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.prosdev.readmysign.MainActivity" >
    
    <item
		android:id="@+id/AddBtn"
		android:orderInCategory="100"
		android:showAsAction="ifRoom|withText"
		android:onClick="addNewGesture"
	    android:title="@string/AddGesture" />
    
    <item
	    android:id="@+id/TrainBtn"
		android:orderInCategory="100"
		android:showAsAction="ifRoom|withText"
		android:onClick="train"
		android:title="@string/train" />
    
	<item
		android:id="@+id/TestBtn"
		android:orderInCategory="100"
		android:showAsAction="ifRoom|withText"
		android:onClick="test"
	    android:title="@string/test" />
    
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"/>

    <item
        android:id="@+id/data_collection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/data_collection"/>
    
    <item
        android:id="@+id/map_apps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_apps"/>
    
    <item
        android:id="@+id/app_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/app_test"/>

</menu>
